# rlog

./: .pre-commit-config.yaml  README.md  TODO.md  bump.py  pyproject.toml
src/rlog/: __init__.py  core.py
